--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -13,4 +13,5 @@ COPY . .
 
 RUN npm run build
 
-CMD ["sh", "-c", "npm run start:production"]
+CMD ["sh", "-c", "npm start"]
+# CMD ["sh", "-c", "npm run start:production"]
