--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,22 @@ version: "3.8"
 
 services: 
   mysql:
-    image: mysql:8.0
+    image: mysql:8.0 
     restart: always
+    command: mysqld --default-authentication-plugin=mysql_native_password
     environment:
+      - MYSQL_ROOT_PASSWORD=password
       - MYSQL_PASSWORD=password
-      - MYSQL_DB=food_db1
+      - MYSQL_USER=root
+      - MYSQL_DATABASE=food_db1
     ports: 
       - 3306:3306
     networks:
       - shared-network
     volumes: 
-      - ./mySQL_DB
-
+      - my-db:/var/lib/mysql
+      - /mySQL_DB/meals.ibd   
+      
   server:
     container_name: server
     restart: unless-stopped
@@ -45,7 +49,9 @@ services:
       - server
 
     
-
-
 networks: 
   shared-network:
+    driver: local
+
+volumes: 
+  my-db:
