--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
