--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,43 @@
 node_modules
+node_modules/.bin/acorn
+node_modules/.bin/acorn
+node_modules/.bin/acorn.cmd
+node_modules/.bin/acorn.ps1
+node_modules/.bin/ansi-html
+node_modules/.bin/ansi-html.cmd
+node_modules/.bin/acorn
+node_modules/.bin/acorn.cmd
+node_modules/.bin/acorn.ps1
+node_modules/.bin/acorn
+node_modules/.bin/acorn.cmd
+node_modules/.bin/acorn.ps1
+node_modules/.bin/ansi-html
+node_modules/.bin/ansi-html.cmd
+node_modules/.bin/ansi-html.ps1
+node_modules/.bin/atob
+node_modules/.bin/atob.cmd
+node_modules/.bin/atob.ps1
+node_modules/.bin/autoprefixer
+node_modules/.bin/autoprefixer.cmd
+node_modules/.bin/autoprefixer.ps1
+node_modules/.bin/babylon
+node_modules/.bin/babylon.cmd
+node_modules/.bin/babylon.ps1
+node_modules/.bin/browserslist
+node_modules/.bin/browserslist-lint
+node_modules/.bin/browserslist-lint.cmd
+node_modules/.bin/browserslist-lint.ps1
+node_modules/.bin/browserslist.cmd
+node_modules/.bin/browserslist.ps1
+node_modules/.bin/css-blank-pseudo
+node_modules/.bin/css-blank-pseudo.cmd
+node_modules/.bin/acorn
+*.cmd
+*.ps1
+node_modules/.bin/ansi-html
+node_modules/.bin/acorn
+node_modules/.bin/acorn
+node_modules/.bin/css-has-pseudo
+node_modules/.bin/loose-envify.ps1
+node_modules/.bin/acorn.cmd
+node_modules
