--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "webpack": "^5.74.0",
     "dotenv": "^10.0.0"
   },
