--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^10.0.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "webpack": "^5.74.0",
-    "dotenv": "^10.0.0"
+    "password-hash": "^1.2.2",
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
