--- a/api/.gitignore
+++ b/api/.gitignore
@@ -6,3 +6,11 @@ node_modules
 temp/
 node_modules/
 node_modules
+build/
+.firebaserc
+firebase.json
+.firebase
+.eslintcache
+.github/workflows
+.github\workflows\firebase-hosting-pull-request.yml
+.github\workflows\firebase-hosting-merge.yml
