--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/server.js"
+    "start": "node ./src/server.js"
   },
   "keywords": [
     "node",
@@ -17,10 +17,17 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
+    "firebase": "^9.19.1",
+    "firebase-admin": "^11.6.0",
+    "firebase-functions": "^4.2.1",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "parcel": "^2.8.3",
     "password-hash": "^1.2.2",
     "webpack": "^5.74.0"
   },
