--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/server.js"
+    "start": "node ./src/server.js",
+    "build": "npm install"
   },
   "keywords": [
     "node",
