--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.5",
+    "react-router": "^6.10.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
